# QR_Code

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_TIMEWEB.md  Dockerfile  QUICKSTART.md  README.md  TIMEWEB_MCP_SETUP.md  alembic.ini  deploy-beget-auto.sh  deploy-beget-final.sh  deploy-timeweb-api.ps1  deploy-timeweb.sh  deploy-via-api.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-compose_local.yml  main.py  pyproject.toml  qr-code-bot.service  requirements.txt  setup-beget.ps1  setup.py  update.sh
.cursor/: mcp.json.example
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_columns_per_page.py
src/: __init__.py
src/bot/: __init__.py  main.py
src/bot/handlers/: __init__.py  base.py  callbacks.py  commands.py  messages.py
src/bot/keyboards/: settings.py
src/bot/middleware/: rate_limit.py
src/core/: __init__.py  config.py  exceptions.py  logging_config.py
src/database/: __init__.py  database.py  models.py  repositories.py
src/services/: excel_service.py  file_service.py  pdf_service.py  qr_decode_service.py  qr_service.py  text_service.py
src/utils/: helpers.py  validators.py
tests/: __init__.py  test_services.py  test_validators.py
